# codefuse

./: .env  README.md  database.py  manage.py  pyproject.toml
app/: admin.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_initial.py
app/models/: __init__.py  order_models.py  transaction_models.py  wallet_models.py
config/: env.py
docker/: Dockerfile
libs/number_libs/: us.py
libs/paystack_libs/: base_service.py  payment.py  verify.py  webhook.py
server/: database.db  database.py  urls.py  wsgi.py
server/settings/: base.py  local.py  production.py
server/static/js/: areacode.js  dynamic.js  others.js  rent.js  services.js  us.js  utils.js
templates/: base.html  callback.html  dashboard.html  demo.html  demos.html  error.html  index.html  login.html  orders.html  pricing.html  profile.html  profile_edit.html  signup.html  wallet.html
user/: admin.py  backends.py  models.py
user/migrations/: 0001_initial.py
utilities/: base_model.py
wallet/: models.py
